--- a/frontend-ethos/package.json
+++ b/frontend-ethos/package.json
@@ -58,7 +58,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
+    "vaul": "1.1.1",
     "zod": "3.25.67"
   },
   "devDependencies": {
@@ -70,5 +70,8 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "vaul": "1.1.1"
   }
 }
