--- a/frontend-ethos/package.json
+++ b/frontend-ethos/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.7",
+    "@apollo/experimental-nextjs-app-support": "^0.13.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -45,6 +47,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "graphql": "^16.11.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
